# dataset-catalogue

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
earth/: app.py  base.py  schema.json  validate_yaml.py
earth/static/: basic.css
earth/templates/: base.html  basesearch.html  detailedsearch.html  index.html  search.html
env/: .earth.env.example  .postgres.env.example
frontend/: README.md  consts.js  index.html  search.js  style.css
frontend/scripts/: autocomplete.js  consts.js  search.js
tests/: dataset1.yml  dataset_dwd.yml  dataset_metnet.yml  dwd.datasets.earth.yml  kit.datasets.earth.yml  metnet.datasets.earth.yml
