[tool.poetry]
name = "earth"
version = "0.1.0"
description = "Code to be run in Docker container"
authors = ["Ugur Cayoglu <cayoglu@me.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jsonschema = "^3.2.0"
PyYAML = "^5.3.1"
Flask = "^1.1.2"
Flask-SQLAlchemy = "^2.4.4"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
validate = "earth.validate_yaml:main"
